# Reconhecimento-de-padroes-imagens-de-textos

./: LICENSE  README.md
ImgProcessingServer/: CMakeLists.txt  imgprocessingserver.cpp  imgprocessingserver.hpp  main.cpp
ImgProcessingServer/ImgProcessing/: imgprocessing.cpp  imgprocessing.hpp
ImgProcessingServer/Transmission/: tcpserver.cpp  tcpserver.hpp  transmission.cpp  transmission.hpp
RaspberryPIController/: CMakeLists.txt  main.cpp  movementctrl.cpp  movementctrl.hpp  rpicommands.hpp  rpicontroller.cpp  rpicontroller.hpp
RaspberryPIController/Transmission/: tcpclient.cpp  tcpclient.hpp  transmission.cpp  transmission.hpp
